--- a/ME231.html
+++ b/ME231.html
@@ -86,8 +86,9 @@ br
   </tr>
   <tr> <td>October 06, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec24.pdf" target="_blank">Lecture 24</td>  </tr>
   <tr> <td>October 09, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec25.pdf" target="_blank">Lecture 25</td>  </tr>
-  <tr> <td>October 13, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec26.pdf" target="_blank">Lecture 26 
+  <tr> <td>October 13, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec26.pdf" target="_blank">Lecture 26 
     <p> <a href = "https://anshulfy.github.io/course_webpage/moa.pdf" target="_blank">Moment of Area</p> </td></tr>
+  <tr> <td>October 17, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec26.pdf" target="_blank">Lecture 26</td>  </tr>
 </table>
 </td>
 <td style="border: 0px solid #000000;">
