--- a/me232/me232.html
+++ b/me232/me232.html
@@ -49,16 +49,16 @@ br
   <p style="font-size:30px; font-weight: bold; text-align:center; color:#0052cc">ME232: Dynamics</p>
 <hr style="height:2px;border-width:0;color:gray;background-color:#0052cc">
 <center>
-<! <p style="font-size:30px; font-weight: bold"> Feedback  &nbsp;&nbsp;<strong class="blink">(New)</strong><p>  
+<!-- <p style="font-size:30px; font-weight: bold"> Feedback  &nbsp;&nbsp;<strong class="blink">(New)</strong><p>  
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVAz8s_KU5pLsJZ5hLFOHwnFSiCgl_rfIny7eVHz9WbXCriA/viewform?embedded=true" width="640" height="474" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-!>
+-->
 <table style="width: 70%; margin-left: auto; margin-right: auto;">	
 <tr> <td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Lecture Notes: <p>
 <table class="table1">
   <tr> <td>December 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
   <tr> <td>January 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-<!  <tr> <td>August 4, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+<!--  <tr> <td>August 4, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
   <tr> <td>August 7, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>August 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
@@ -91,19 +91,19 @@ br
     <p> <a href = "https://anshulfy.github.io/course_webpage/moa.pdf" target="_blank">Moment of Area</p> </td></tr>
   <tr> <td>October 17, 2020 </td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec27.pdf" target="_blank">Lecture 27</td>  </tr>
   <tr> <td>October 20, 2020 &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec28.pdf" target="_blank">Lecture 28</td>  </tr>
-!>
+-->
 </table>
 </td>
 <td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Tutorial Problems: <p>
 <table  class="table2">
-<!  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
+<!--  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto3.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 5</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto5.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 6  &nbsp;&nbsp;<strong class="blink">(New)</strong></td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto6.pdf" target="_blank">Link</td>  </tr>
->!
+-->
 </table>
 </td>
 </tr>
