--- a/me232/me232.html
+++ b/me232/me232.html
@@ -94,10 +94,10 @@ br
 -->
 </table>
 </td>
-<td style="border: 0px solid #000000;">
+<!--<td style="border: 0px solid #000000;">
 <p style="font-size:25px; font-weight: bold"> Tutorial Problems: <p>
 <table  class="table2">
-<!--  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
+  <tr> <td>Tutorial 1</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto1.pdf" target="_blank"> Link</td> </tr>
   <tr> <td>Tutorial 2</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto2.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 3</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto3.pdf" target="_blank">Link</td>  </tr>
   <tr> <td>Tutorial 4</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me231_tuto4.pdf" target="_blank">Link</td>  </tr>
