--- a/me232/me232.html
+++ b/me232/me232.html
@@ -58,8 +58,8 @@ br
 <table class="table1">
   <tr> <td>December 29, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec1.pdf" target="_blank"> Lecture 1</td> </tr>
   <tr> <td>January 01, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec2.pdf" target="_blank">Lecture 2</td>  </tr>
-<!--  <tr> <td>August 4, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
-  <tr> <td>August 7, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
+  <tr> <td>January 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
+<!--  <tr> <td>August 7, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>August 11, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
   <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
   <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
