--- a/me232/me232.html
+++ b/me232/me232.html
@@ -61,8 +61,8 @@ br
   <tr> <td>January 05, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec3.pdf" target="_blank">Lecture 3</td>  </tr>
   <tr> <td>January 08, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec4.pdf" target="_blank"> Lecture 4</td> </tr>
   <tr> <td>January 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec5.pdf" target="_blank">Lecture 5</td>  </tr>
-<!--  <tr> <td>August 14, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
-  <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
+  <tr> <td>January 12, 2021</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/me232/lec6.pdf" target="_blank">Lecture 6</td>  </tr>
+<!--  <tr> <td>August 18, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec7.pdf" target="_blank">Lecture 7</td>  </tr>
   <tr> <td>August 21, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec8.pdf" target="_blank">Lecture 8</td>  </tr>
   <tr> <td>August 24, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec9.pdf" target="_blank">Lecture 9</td>  </tr>
   <tr> <td>August 28, 2020</td> <td style="text-align: center;"> <a href = "https://anshulfy.github.io/course_webpage/lec10.pdf" target="_blank">Lecture 10</td>  </tr>
